manifests/backend/nats/state/12-stan-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stan-svc
  labels:
    app: stan
spec:
  selector:
    app: stan
  clusterIP: None
  ports:
  - name: metrics
    port: 7777
